--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,82 +1,115 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
+@article{ahrens2022electrode,
+  title={ELECTRODE: An electrochemistry package for atomistic simulations},
+  author={Ahrens-Iwers, Ludwig JV and Janssen, Mathijs and Tee, Shern R and Mei{\ss}ner, Robert H},
+  journal={The Journal of Chemical Physics},
+  volume={157},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={084801},
+  year={2022},
+  month ={jul}, 
+  publisher={AIP Publishing LLC},
+  doi = {10.1063/5.0099239},
+  url = {https://doi.org/10.1063/5.0099239}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{tee2022fully,
+  title={Fully periodic, computationally efficient constant potential molecular dynamics simulations of ionic liquid supercapacitors},
+  author={Tee, Shern R and Searles, Debra J},
+  journal={The Journal of Chemical Physics},
+  volume={156},
+  number={18},
+  pages={184101},
+  year={2022},
+  mount = {apr},
+  publisher={AIP Publishing LLC},
+  doi = {10.1063/5.0086986},
+  url = {https://doi.org/10.1063/5.0086986}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{liu2016biomimetic,
+  title={Biomimetic autonomous enzymatic nanowalker of high fuel efficiency},
+  author={Liu, Meihan and Cheng, Juan and Tee, Shern Ren and Sreelatha, Sarangapani and Loh, Iong Ying and Wang, Zhisong},
+  journal={ACS nano},
+  volume={10},
+  number={6},
+  pages={5882--5890},
+  year={2016},
+  publisher={ACS Publications}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{tee2018well,
+  title={How Well Can DNA Rupture DNA? Shearing and Unzipping Forces inside DNA Nanostructures},
+  author={Tee, Shern Ren and Wang, Zhisong},
+  journal={ACS Omega},
+  volume={3},
+  number={1},
+  pages={292--301},
+  year={2018},
+  publisher={ACS Publications}
 }
+
+@article{tee2018mechanosensing,
+  title={Mechanosensing Potentials Gate Fuel Consumption in a Bipedal DNA Nanowalker},
+  author={Tee, Shern Ren and Hu, Xinpeng and Loh, Iong Ying and Wang, Zhisong},
+  journal={Physical Review Applied},
+  volume={9},
+  number={3},
+  pages={034025},
+  year={2018},
+  publisher={APS}
+}
+
+@article{yeo2017dna,
+  title={A DNA bipedal nanowalker with a piston-like expulsion stroke},
+  author={Yeo, QY and Loh, IY and Tee, SR and Chiang, YH and Cheng, J and Liu, MH and Wang, ZS},
+  journal={Nanoscale},
+  volume={9},
+  number={33},
+  pages={12142--12149},
+  year={2017},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{loh2014bistate,
+  title={From bistate molecular switches to self-directed track-walking nanomotors},
+  author={Loh, Iong Ying and Cheng, Juan and Tee, Shern Ren and Efremov, Artem and Wang, Zhisong},
+  journal={Acs Nano},
+  volume={8},
+  number={10},
+  pages={10293--10304},
+  year={2014},
+  publisher={ACS Publications}
+}
+
+@article{chiang2018inchworm,
+  title={Inchworm bipedal nanowalker},
+  author={Chiang, YH and Tsai, SL and Tee, SR and Nair, OL and Loh, IY and Liu, MH and Wang, ZS},
+  journal={Nanoscale},
+  volume={10},
+  number={19},
+  pages={9199--9211},
+  year={2018},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{zhou2021caveolin,
+  title={Caveolin-1 and cavin1 act synergistically to generate a unique lipid environment in caveolae},
+  author={Zhou, Yong and Ariotti, Nicholas and Rae, James and Liang, Hong and Tillu, Vikas and Tee, Shern and Bastiani, Michele and Bademosi, Adekunle T and Collins, Brett M and Meunier, Frederic A and others},
+  journal={Journal of Cell Biology},
+  volume={220},
+  number={3},
+  year={2021},
+  publisher={The Rockefeller University Press},
+	doi = {10.1083/jcb.202005138},
+	url = {https://doi.org/10.1083/jcb.202005138}
+}
+
+@article{tee2021theory,
+  title={Theory and Practice in Constant Potential Molecular Dynamics Simulations},
+  author={Tee, Shern Ren},
+  year={2021},
+  publisher={AIP Publishing LLC, Melville, New York},
+  doi={10.1063/9780735422377_004},
+  url={http://doi.org/10.1063/9780735422377_004}
+}
+
