selected some papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   month ={jul}, 
   publisher={AIP Publishing LLC},
   doi = {10.1063/5.0099239},
-  url = {https://doi.org/10.1063/5.0099239}
+  url = {https://doi.org/10.1063/5.0099239},
+  selected = {true}
 }
 
 @article{tee2022fully,
@@ -23,7 +24,8 @@
   mount = {apr},
   publisher={AIP Publishing LLC},
   doi = {10.1063/5.0086986},
-  url = {https://doi.org/10.1063/5.0086986}
+  url = {https://doi.org/10.1063/5.0086986},
+  selected = {true}
 }
 
 @article{liu2016biomimetic,
